Web/static/css/style.css
/* ... */
span {
    padding: 0 0 2px;
    color: gray;
    font-weight: bold;
}

.nobold {
    font-weight: normal;
    color: gray;
}

.hidden {
    display: none;
}

a {
    text-decoration: none;
    color: #2B587A;
    cursor: pointer;
}

.layout {
    width: 791px;
    margin: 0 auto;
}

.page_header {
    position: relative;
    width: 791px;
    height: 45px;
    background-repeat: no-repeat;
    background-position: 0;
    background: url('../img/header.png');
}

#page_act {
    border-bottom: 1px solid #d5dde6;
    padding: 2px 10px 5px 10px;
    color: #2B587A;
    width: 608px;
    margin-left: -10px;
}

.home_button {
    position: absolute;
    width: 145px;    
    text-indent: -999px;
    height: 42px;
}

.header_navigation {
    text-align: center;
    line-height: 20px;
    padding-right: 8px;
    text-transform: lowercase;
    float: right;
}

.header_navigation .link {
    display: inline-block;
    height: 29px;
    padding: 11px 4px 0 7px;
    background-size: 1.5px 41px;
    background: url('../img/divider.png') no-repeat;
}

.header_navigation .link a {
  color: #D7D7D7;
  text-decoration: none;
  font-weight: bold;
}

.header_navigation .link a:hover {
  text-decoration: underline;
  color: #fff;
}

.sidebar {
    width: 118px;
    margin: 4px 0 0 4px;
    float: left;
}

.navigation {
    position: relative;
    padding: 0;
}

.navigation .link {
    display: block;
    padding: 3px 3px 3px 6px;
    text-decoration: none;
    border-top: 1px solid #fff;
    color: #000;
    border-bottom: 0;
    border-left: 0;
    border-right: 0;
    font-size: 11px;
    text-align: left;
    cursor: pointer;
    background: none;
    margin-bottom: 1px;
}

.navigation .link:hover {
    background-color: #E4E4E4;
    border-top: 1px solid #CCCCCC;
}

.navigation .edit-button {
    background-color: #fff !important;
    color: gray !important;
    position: absolute;
    right: 0;
}

.navigation_footer {
    padding: 0;
}

.navigation_footer .link {
    display: block;
    padding: 3px 3px 3px 6px;
    text-decoration: none;
    border-top: 1px solid #fff; /* fix */
    color: #000;
}

.navigation_footer .link:hover {
    background-color: #E4E4E4;
    border-top: 1px solid #CCCCCC;
}

.page_body {
    width: 632px;
    float: right;
    margin-right: 15px;
    margin-top: -2px;
    font-size: 11px;
    text-align: left;
}

.wrap1 {
    border: 1px solid #EBF0F4;
    border-top: 0px;
    width: auto;
}

.wrap2 {
    border-right: 1px solid #F6F8FA;
    border-top: 0px;
}

.page_yellowheader {
    padding: 4px 10px 4px;
    font-weight: bold;
    background: url('../img/header_yellow.png') repeat-x;
    background-color: #EEE5B8;
    border-right: solid 1px #DCD4A4;
    border-left: solid 1px #E4DDB4;
    border-bottom: solid 1px #D7CF9E;
    overflow: hidden;
}

#wrapHI {
    border-right: solid 1px #D5DDE6;
    border-left: solid 1px #D5DDE6;
}

#wrapH {
    border-right: solid 1px #EAEEF3;
    border-left: solid 1px #EAEEF3;
}

.page_yellowheader span {
    color: #C8BF85;
}

.page_yellowheader a {
    color: #C8BF85;
}

.page_content {
    display: inline-block;
    width: 610px;
}

.page_wrap {
    border-bottom: solid 1px #c3cad2;
    border-left: solid 1px #d5dde6;
    border-right: solid 1px #d5dde6;
    padding: 12px;
    width: 604px;
    margin-left: 1px;
}

.content-main-tile {
    margin: -10px;
    margin-top: 3pt;
    padding: 7pt;
    border-top: 1px solid #ebf0f4;
    background-color: #fbfbfb;
}

.float-right {
    float: right;
}

.lowercase {
    text-transform: lowercase;
}

.album {
    margin: 8px;
    padding: 8px;
    width: 95%;
    background-color: #fff;
    border: 1px solid #ebf0f4;
}

.album-photo {
    position: relative;
    background-color: darkgrey;
    margin: 4pt;
    width: calc(33% - 10pt);
    height: 82px;
    text-align: center;
    vertical-align: text-top;
}

.album-photo img {
    width: 100%;
    max-height: 82px;
    vertical-align: top;
}

.album-photo > .album-photo--delete {
    position: absolute;
    right: 0;
    padding: 5px;
    margin: 4px;
    color: #fff;
    background-color: hsla(0, 0%, 0%, 0.3);
    width: 10px;
    height: 10px;
    line-height: 10px;
    opacity: 0;
    transition: .1s opacity ease-out;
}

.album-photo:hover > .album-photo--delete {
    opacity: 1;
}

.name-checkmark {
    margin-left: 2pt;
}

#profile_link, .profile_link {
    display: block;
    box-sizing: border-box;
    padding: 3px;
    background: transparent;
    border: none;
    border-bottom: 1px solid #CCC;
    font-size: 11px;
    color: #2b587a;
    width: 200px;
    text-align: left;
    cursor: pointer;
}

#profile_links {
    margin: 10px 0;
}

#profile_link:hover, .profile_link:hover {
    background: #ECECEC;
}

.page_footer {
    margin-left: 95px;
    padding-top: 5px;
    clear: both;
    text-align: center;
}

table {
    font-size: 11px;
    text-align: left;
}

.information {
    padding: 9px;
    background-color: #c3e4ff;
}

.error {
    padding: 9px;
    background-color: #ffc3c3;
}

.page_footer .link {
    padding: 3px 7px;
    display: inline-block;
    color: #444;
    text-decoration: none;
}

.page_footer .link:hover {
    background-color: #DFDFDF;
}

.content_divider {
    margin-bottom: 6px;
}

.page_status {
    font-weight: normal;
    font-size: 11px;
    padding: 3px 1px 3px;
    color: #000;
    width: 380px;
    height: auto !important;
    overflow: hidden;
}

.page_status_edit_button {
    cursor: pointer;
}

.page_status_edit_button:hover {
    text-decoration: underline;
}

.page_status_popup {
    position: absolute;
    border: 1px solid #CCC;
    background-color: #f7f7f7;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);;
    padding: 10px;
    float: right;
    margin-top: 6px;
    margin-left: -6px;
}

.page_status_popup form {
    margin: 0;
}
/* ... */

